--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-The goal of Koboconnect is to make it facilitate data extraction from Kobotools projects/assets into R.
+The goal of Koboconnect is to facilitate data extraction from Kobotools projects/assets into R.
 
 ## Installation
 
@@ -156,6 +156,7 @@ The following packages have been used to develop this.
 5. Package [`usethis`](https://cran.r-project.org/web/packages/usethis/index.html) to help with setup
 6. Package [`devtools`](https://cran.r-project.org/web/packages/devtools/index.html) to develop the package
 7. Package [`Roxygen2`](https://cran.r-project.org/web/packages/roxygen2/index.html) to help with documentation
+8. Package [`testthat`](https://cran.r-project.org/web/packages/testthat/index.html) for automation of testing
 
 
 
