--- a/README.Rmd
+++ b/README.Rmd
@@ -29,14 +29,14 @@ The effort is still in its early stage. The development version can be installed
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("asitav-sen/Koboconnect")
+devtools::install_github("asitav-sen/KoboconnectR")
 ```
 ## Getting started
 
 Before being able to use the kobotools API, one needs the API token and in some cases the user id and password. The [kobotools documentation](https://support.kobotoolbox.org/api.html) lists multiple ways for one to extract the token value. This token can be stored in your Renviron using the `set_kobo_token` function.
 
 ```{r example}
-library(Koboconnect)
+library(KoboconnectR)
 set_kobo_token("this is a token value")
 ```
 
