--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,8 @@ devtools::install_github("asitav-sen/KoboconnectR")
 ```
 ## Getting started
 
+**These functions have been removed because of their dependency on Renviron. Use the functions in Extracting data section**
+
 Before being able to use the kobotools API, one needs the API token and in some cases the user id and password. The [kobotools documentation](https://support.kobotoolbox.org/api.html) lists multiple ways for one to extract the token value. This token can be stored in your Renviron using the `set_kobo_token` function.
 
 ```{r example}
