Updated news and description

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 <!-- badges: end -->
 
-The goal of KoboconnectR is to facilitate data extraction from Kobotoolbox projects/assets into R.
+The goal of KoboconnectR is to facilitate data extraction from Kobotoolbox projects/assets into R, instead of downloading the individual spreadsheet files.
 
 ## Installation
 
@@ -36,7 +36,20 @@ devtools::install_github("asitav-sen/KoboconnectR")
 
 Before being able to use the kobotoolbox API, one needs to set up API token. The [kobotoolbox documentation](https://support.kobotoolbox.org/api.html) lists multiple ways for one to extract the token value. If there is a token, the easiest way to retrieve it is by using `get_kobo_token` function.
 
-For details, check the vignette.
+
+```{r eval=FALSE, include=TRUE}
+kobotools_kpi_data(assetid= "assetid", url="kobo.humanitarianresponse.info", uname="username", pwd="password")
+```
+
+To find the asset id, one can use the `kobotools_api` function that returns a list of assets the user has access to.
+
+```{r echo=TRUE, eval=FALSE, include=TRUE}
+kobotools_api(url="kobo.humanitarianresponse.info", simplified=T, uname="userid", pwd="password")
+```
+
+
+
+For further details, check the vignette.
 
 ## Contribution
 
@@ -67,13 +80,13 @@ Please feel free to add issue of suggestions in [github](https://github.com/asit
 The following packages are required to install and run this package.
 
 
-1. Package [`httr`](https://cran.r-project.org/web/packages/httr/index.html)
-2. Package [`jsonlite`](https://cran.r-project.org/web/packages/jsonlite/index.html)
-3. Package [`curl`](https://cran.r-project.org/web/packages/curl/index.html)
-4. Package [`mime`](https://cran.r-project.org/web/packages/mime/index.html)
-5. Package [`openssl`](https://cran.r-project.org/web/packages/openssl/index.html)
-6. Package [`R6`](https://cran.r-project.org/web/packages/R6/index.html)
-7. Package [`methods`](https://cran.r-project.org/web/packages/methods/index.html)
+1. Package [`httr`](https://cran.r-project.org/package=httr)
+2. Package [`jsonlite`](https://cran.r-project.org/package=jsonlite)
+3. Package [`curl`](https://cran.r-project.org/package=curl)
+4. Package [`mime`](https://cran.r-project.org/package=mime)
+5. Package [`openssl`](https://cran.r-project.org/package=openssl)
+6. Package [`R6`](https://cran.r-project.org/package=R6)
+7. Package `methods`
 
 
 
