--- a/vignettes/Usage.Rmd
+++ b/vignettes/Usage.Rmd
@@ -110,6 +110,22 @@ On successful execution, the URL of the created export will be returned and prin
 
 Find dummy example of [how to create export and download csv from Kobotoolbox to R here](https://blog.asitavsen.com/post/how-to-download-kobotoolbox-data-in-r/)
 
+### Downloading csv file directly
+
+This is a new function which
+
+1. Creates an export as csv
+2. Downloads the export (And returns)
+3. Deletes the exports after download
+
+
+```{r eval=FALSE, include=TRUE}
+kobo_df_download(uname = "username",pwd="password", assetid = "asset",
+                                          lang = "English (en)")
+```
+
+
+
 ## Issues and Suggestions
 
 Please feel free to add issue of suggestions in [github](https://github.com/asitav-sen/KoboconnectR/issues)
